# subsetter

./: .gitignore  Cargo.toml  NOTICE  README.md  all.sh  debug.sh  ft.sh  run.sh  ss.sh
.github/workflows/: ci.yml  rust.yml
examples/: fuzz.rs
fonts/: DejaVuSansMono-LICENSE  NOTICE  Syne-Regular_subset-LICENSE  TestTTC-INFO
src/: cff2.rs  cmap.rs  font_data.rs  glyf.rs  head.rs  hhea.rs  hmtx.rs  interjector.rs  lib.rs  main.rs  mapper.rs  maxp.rs  name.rs  post.rs  provider.rs  read.rs  remapper.rs  stream.rs  util.rs  write.rs
src/cff/: argstack.rs  charset.rs  charstring.rs  cid_font.rs  dict.rs  encoding.rs  index.rs  mod.rs  number.rs  operator.rs  private_dict.rs  remapper.rs  sid_font.rs  subroutines.rs  top_dict.rs  types.rs
src/cff/dict/: font_dict.rs  mod.rs  private_dict.rs  top_dict.rs
src/cff/subset/: argstack.rs  char_strings.rs  charset.rs  mod.rs  sid.rs  top_dict.rs
src/cmap/: mod.rs  subtable12.rs  subtable4.rs
src/name/: mod.rs  read.rs  subset.rs
src/post/: mod.rs  read.rs  subset.rs  write.rs
tests/: .gitignore  README.md  subset.rs
tests/cff/: LatinModernRoman-Regular_1.txt  LatinModernRoman-Regular_2.txt  NewCMMath-Regular_1.txt  NotoSansCJKsc-Regular_1.txt  NotoSansCJKsc-Regular_custom_font_matrix_1.txt
tests/cli/: Cargo.toml
tests/cli/src/: main.rs
tests/data/: cff.tests  clicker_script_regular.tests  dejavu_sans_mono.tests  fonttools.tests  integration.tests  latin_modern_roman.tests  mplus1p_regular.tests  noto_sans_cjk.tests  noto_sans_regular.tests  notosans.tests  roboto_regular.tests  subsets.tests
tests/fuzz/: Cargo.toml
tests/fuzz/src/: main.rs
tests/scripts/: gen-tests.py
tests/src/: basics.rs  cff.rs  font_tools.rs  main.rs  subsets.rs  ttf.rs
tests/ttx/: .gitignore  Cantarell-VF_1.ttx  Cantarell-VF_2.ttx  ClickerScript-Regular_1.ttx  DejaVuSansMono_1.ttx  EndcharInSubroutine_1.ttx  LatinModernRoman-Regular_1.ttx  MPLUS1p-Regular_1.ttx  NewCMMath-Regular_1.ttx  NotoSans-Regular_1.ttx  NotoSans-Regular_var_1.ttx  NotoSans-Regular_var_2.ttx  NotoSans-Regular_var_3.ttx  NotoSansCJKsc-Bold-subset1_1.ttx  NotoSansCJKsc-Regular_1.ttx  Roboto-Regular_1.ttx  clear.sh
