[workspace]
members = ["tests/cli", "tests/fuzz"]
resolver = "2"

[workspace.package]
version = "0.2.2"
authors = ["Laurenz Mädje <laurmaedje@gmail.com>", "Laurenz Stampfl <laurenz.stampfl@gmail.com>"]
edition = "2021"
repository = "https://github.com/typst/subsetter"
readme = "README.md"
license = "MIT OR Apache-2.0"

[package]
name = "subsetter"
description = "Reduces the size and coverage of OpenType fonts."
categories = ["compression", "encoding"]
keywords = ["subsetting", "OpenType", "PDF"]
exclude = ["fonts/*", "tests/*"]
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
license = { workspace = true }

[features]
default = []
variable_fonts = ["dep:skrifa", "dep:write-fonts", "dep:kurbo"]

[dependencies]
rustc-hash = "2.1"
skrifa = { optional = true, version = "0.33" }
kurbo = { optional = true, version = "0.11" }
write-fonts = { optional = true, version = "0.39.1"}

[dev-dependencies]
skrifa = "0.33"
ttf-parser = "0.25.1"
