[package]
name = "fuzz"
version = "0.1.0"
edition = "2021"

[dependencies]
subsetter = {path = "../.."}
skrifa = "0.19.1"
ttf-parser = {git = "https://github.com/RazrFalcon/ttf-parser", rev = "9bbd432"}
freetype-rs = {git = "https://github.com/LaurenzV/freetype-rs"}
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.10.0"
walkdir = "2.5.0"