[package]
name = "fuzz"
version = { workspace = true }
edition = { workspace = true }
publish = false

[dependencies]
subsetter = { path = "../.." }
freetype-rs = { git = "https://github.com/LaurenzV/freetype-rs", rev = "d27ea29" }
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.10.0"
skrifa = "0.19.1"
ttf-parser = { git = "https://github.com/RazrFalcon/ttf-parser", rev = "9bbd432" }
walkdir = "2.5.0"
